2008-02-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsmb.c: (auth_callback):
	Fix parameters order in keyring lookup call.
	
2008-02-26  Yanko Kaneti  <yaneti@declera.com>

	* configure.ac: explicitly depend on libxml-2.0 
	for building the dav backend.

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (ask_password_reply),
	(g_mount_source_ask_password_async), (ask_question_reply),
	(g_mount_source_ask_question_async):
	make errors say "Internal Error" instead of failing

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjobmount.c: (run), (try):
	use ref/unref pair to stop backend from going away when the mount
	fails

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjobmount.c: (mount_failed):
	no g_warning for failed monts, please

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjob.c: (g_vfs_job_failed_from_error):
	* daemon/gvfsjob.h:
	make the error argument const

2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
	Use standard lock instead of recursive lock.

2008-02-25  David Zeuthen  <davidz@redhat.com>

	* configure.ac: fix typo in AC_ARG_ENABLE for gphoto2

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.c:
        * daemon/dbus-gmain.c:
	Only use dbus_watch_get_unix_fd for
	dbus >= 1.1.1

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.8 ===

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* programs/Makefile.am (EXTRA_DIST):
	Add gvfs-bash-completion.sh

	* NEWS:
	Update for release

2008-02-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsftp.c:
	* daemon/gvfsbackendsmb.c:
	Update to gvfskeyring api changes

	* daemon/gvfskeyring.c:
	* daemon/gvfskeyring.h:
	Add object, authtype and port parameters for both save and
	lookup. 
	
2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 